--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: zrox-sms
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn wsgi:app
+    startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.8.0 
